if(NOT TARGET gtest_main AND ENABLE_TEST)
    option(gtest_disable_pthreads "Disable uses of pthreads in gtest." ON)
    add_subdirectory(googletest)
    set_target_properties(gtest_main PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gtest PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gmock PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gmock_main PROPERTIES FOLDER Vendors/googletest)
endif()

if(NOT TARGET cmdline)
    option(CMDLINE_ENABLE_TEST "Enable cmdline test" OFF)
    add_subdirectory(cmdline)
endif()

if(NOT TARGET cpp-utilities-algorithm)
    add_subdirectory(cpp-utilities)
endif()

if(NOT TARGET lua)
    option(LUA_BUILD_SHARED "Build lua shared lib" ON)
    add_subdirectory(lua-cmake)
endif()

if(NOT TARGET sol2::sol2::single)
    add_subdirectory(sol2/single)
endif()

if(NOT TARGET glfw)
    option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
    option(GLFW_BUILD_EXAMPLES "Build the GLFW example programs" OFF)
    option(GLFW_BUILD_TESTS "Build the GLFW test programs" OFF)
    option(GLFW_BUILD_DOCS "Build the GLFW documentation" OFF)
    option(GLFW_INSTALL "Generate installation target" OFF)
    add_subdirectory(glfw)
    set_target_properties(glfw PROPERTIES FOLDER Vendors/glfw)
    set_target_properties(update_mappings PROPERTIES FOLDER Vendors/glfw)
endif()

if(NOT TARGET spdlog)
    option(SPDLOG_BUILD_SHARED "Build shared library" ON)
    add_subdirectory(spdlog)
    set_target_properties(spdlog PROPERTIES FOLDER Vendors/spdlog)
endif()
if(NOT TARGET rttr_core)
    option(BUILD_RTTR_DYNAMIC "Build the dynamic/shared version of RTTR library" ON)
    option(BUILD_UNIT_TESTS "Build the unit tests of RTTR" OFF)
    option(BUILD_STATIC "Build RTTR as static library" OFF)
    option(BUILD_WITH_STATIC_RUNTIME_LIBS "Link against the static runtime libraries" OFF)
    option(BUILD_WITH_RTTI "Enable build with C++ runtime type information for compilation" ON)
    option(BUILD_BENCHMARKS "Enable this to build the benchmarks" OFF)
    option(BUILD_EXAMPLES "Enable this to build the examples" OFF)
    option(BUILD_DOCUMENTATION "Enable this to build the documentation" OFF)
    option(BUILD_INSTALLER "Enable this to build the installer" OFF)
    option(BUILD_PACKAGE "Enable this to build the installer" OFF)
    option(USE_PCH "Use precompiled header files for compilation" OFF)
    option(CUSTOM_DOXYGEN_STYLE "Enable this option to use a custom doxygen style for HTML documentation; Otherwise the default will be used" OFF)
    option(BUILD_WEBSITE_DOCU "Enable this option to create the special docu for the website" OFF)
    add_subdirectory(rttr)
endif()